--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "author": "Diiiz",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "restify": "^8.6.0"
   },
   "scripts": {
-    "dev": "nodemon src/app.ts --inspect"
+    "compiler": "tsc",
+    "compiler-watch": "tsc -w",
+    "dev-ts": "nodemon src/app.ts --inspect",
+    "dev": "nodemon dist/app.js --inspect"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.6",
+    "@types/restify": "^8.5.2",
     "nodemon": "^2.0.14",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
